--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.52.0",
-    "@types/node": "^22.14.0"
+    "@types/node": "^22.14.0",
+    "@types/xlsx": "^0.0.35"
   },
   "dependencies": {
     "mailgun": "^0.5.0",
